--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -66,11 +66,19 @@
 .avatar img{
   width: 20rem;
   height: auto;
-  border-radius: 50%;
+  // border-radius: 50%;
   @media only screen and (max-width : 768px) {
     width: 10rem;
   }
+
+
 }
+
+.action_button {
+  margin-top: 20px;
+}
+
+
 
 .list {
   ul {
