--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -50,6 +50,7 @@ h6 {
 
 h1 {
   font-size: 3.2rem;
+  text-align: center;
   line-height: 3.6rem;
   @media only screen and (max-width : 768px) {
     font-size: 3.0rem;
