--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -15,6 +15,13 @@
       color: $link-color
     }
   }
+
+  .top_left_logo {
+    height: 32px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
   .navigation-title {
     letter-spacing: 0.1rem;
     text-transform: uppercase;
